[tool.poetry]
name = "dearpygui_map"
version = "0.0.1"
description = "Map widget for Dear PyGui"
authors = ["Mikko Kouhia <mikko.kouhia@iki.fi>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
dearpygui = "^1.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
