[tool.poetry]
name = "dearpygui_map"
version = "0.0.1"
description = "Map widget for Dear PyGui"
authors = ["Mikko Kouhia <mikko.kouhia@iki.fi>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mkouhia/dearpygui_map"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 1 - Planning",
]

[tool.poetry.dependencies]
python = "^3.6.2"
dearpygui = "^1.3.1"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
